--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kısa Kollu Polo Tişört</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+    html, body {
       margin: 0;
       padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow-x: hidden;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
     }
     .container {
-      max-width: 1200px;
-      margin: auto;
+      width: 100%;
+      max-width: 100%;
+      margin: 0;
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-radius: 0;
+      box-shadow: none;
       overflow: hidden;
+      padding: 20px;
+      box-sizing: border-box;
     }
     .viewer {
       height: 600px;
       background: #eee;
     }
     .content {
-      padding: 30px;
+      padding: 20px 0;
       display: flex;
       flex-wrap: wrap;
-      gap: 40px;
+      gap: 30px;
     }
     .left, .right {
       flex: 1;
-      min-width: 300px;
+      min-width: 280px;
     }
     .gallery img {
       width: 100%;
