--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kısa Kollu Polo Tişört</title>
   <style>
     html, body {
@@ -24,9 +24,23 @@
       padding: 20px;
       box-sizing: border-box;
     }
+    /* Responsive iframe container */
     .viewer {
-      height: 600px;
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 oranı */
+      height: 0;
       background: #eee;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+    .viewer iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
     }
     .content {
       padding: 20px 0;
@@ -75,45 +89,45 @@
 </head>
 <body>
 
-<div class="container">
-  <div class="viewer">
-    <iframe title="T-shirt Polo Lengan Pendek"
-      frameborder="0"
-      allowfullscreen
-      mozallowfullscreen="true"
-      webkitallowfullscreen="true"
-      allow="autoplay; fullscreen; xr-spatial-tracking"
-      src="https://sketchfab.com/models/74c33d16b31346f1a46a55c3ec8e8a78/embed"
-      width="100%" height="100%">
-    </iframe>
-  </div>
-
-  <div class="content">
-    <div class="left">
-      <h2>Kısa Kollu Polo Tişört</h2>
-      <p><strong>Fiyat:</strong> ₺249,00</p>
-      <p><strong>Açıklama:</strong> Günlük kullanım için hafif ve konforlu pamuklu tişört.</p>
-      <p><strong>Bedenler:</strong> S, M, L, XL</p>
-      <p><strong>Renkler:</strong></p>
-      <div class="colors">
-        <div class="color" style="background-color:#ffffff;" title="Beyaz"></div>
-        <div class="color" style="background-color:#000000;" title="Siyah"></div>
-        <div class="color" style="background-color:#1a4d91;" title="Lacivert"></div>
-        <div class="color" style="background-color:#b4b4b4;" title="Gri"></div>
-        <div class="color" style="background-color:#be3144;" title="Kırmızı"></div>
-      </div>
-      <div class="actions">
-        <a href="mailto:satis@seninsiten.com?subject=Tişört Satın Alma Talebi&body=Merhaba, tişört ile ilgileniyorum." target="_blank">Satın Al / İletişim</a>
-        <a class="share" href="https://wa.me/?text=Harika%20bir%20tişört%20keşfettim!%20İncele:%20https://seninsiten.com/urunadi.html" target="_blank">Paylaş</a>
-      </div>
+  <div class="container">
+    <div class="viewer">
+      <iframe
+        title="T-shirt Polo Lengan Pendek"
+        src="https://sketchfab.com/models/74c33d16b31346f1a46a55c3ec8e8a78/embed"
+        frameborder="0"
+        allowfullscreen
+        mozallowfullscreen="true"
+        webkitallowfullscreen="true"
+        allow="autoplay; fullscreen; xr-spatial-tracking">
+      </iframe>
     </div>
 
-    <div class="right gallery">
-      <img src="https://i.ibb.co/xtZLQrJn/r-n-g-rseli-1.png" alt="Ürün Görseli 1">
-      <img src="https://i.ibb.co/0jbZ6bb4/r-n-g-rseli-2.png" alt="Ürün Görseli 2">
+    <div class="content">
+      <div class="left">
+        <h2>Kısa Kollu Polo Tişört</h2>
+        <p><strong>Fiyat:</strong> ₺249,00</p>
+        <p><strong>Açıklama:</strong> Günlük kullanım için hafif ve konforlu pamuklu tişört.</p>
+        <p><strong>Bedenler:</strong> S, M, L, XL</p>
+        <p><strong>Renkler:</strong></p>
+        <div class="colors">
+          <div class="color" style="background-color:#ffffff;" title="Beyaz"></div>
+          <div class="color" style="background-color:#000000;" title="Siyah"></div>
+          <div class="color" style="background-color:#1a4d91;" title="Lacivert"></div>
+          <div class="color" style="background-color:#b4b4b4;" title="Gri"></div>
+          <div class="color" style="background-color:#be3144;" title="Kırmızı"></div>
+        </div>
+        <div class="actions">
+          <a href="mailto:satis@seninsiten.com?subject=Tişört Satın Alma Talebi&body=Merhaba, tişört ile ilgileniyorum." target="_blank">Satın Al / İletişim</a>
+          <a class="share" href="https://wa.me/?text=Harika%20bir%20tişört%20keşfettim!%20İncele:%20https://seninsiten.com/urunadi.html" target="_blank">Paylaş</a>
+        </div>
+      </div>
+
+      <div class="right gallery">
+        <img src="https://i.ibb.co/xtZLQrJn/r-n-g-rseli-1.png" alt="Ürün Görseli 1" />
+        <img src="https://i.ibb.co/0jbZ6bb4/r-n-g-rseli-2.png" alt="Ürün Görseli 2" />
+      </div>
     </div>
   </div>
-</div>
 
 </body>
 </html>
