--- a/index.html
+++ b/index.html
@@ -6,50 +6,46 @@
   <title>Kısa Kollu Polo Tişört</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow-x: hidden;
+      margin: 0; padding: 0; height: 100%; width: 100%;
       font-family: Arial, sans-serif;
       background: #f4f4f4;
     }
     .container {
-      width: 100%;
-      max-width: 100%;
-      margin: 0;
-      border-radius: 0;
-      box-shadow: none;
-      background: #fff;
+      max-width: 1200px;
+      margin: 0 auto;
+      background: white;
       padding: 20px;
       box-sizing: border-box;
     }
-    /* Responsive iframe container */
-    .viewer {
+
+    /* İframe kapsayıcı - oranı belirler */
+    .iframe-wrapper {
       position: relative;
       width: 100%;
       padding-bottom: 56.25%; /* 16:9 oranı */
       height: 0;
-      background: #eee;
-      border-radius: 8px;
       overflow: hidden;
+      border-radius: 8px;
+      background: #eee;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
     }
-    .viewer iframe {
+
+    .iframe-wrapper iframe {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       border: none;
     }
+
+    /* Sayfa içeriği */
     .content {
-      padding: 20px 0;
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
+      margin-top: 30px;
     }
     .left, .right {
-      flex: 1;
+      flex: 1 1 300px;
       min-width: 280px;
     }
     .gallery img {
@@ -65,8 +61,7 @@
       margin-top: 10px;
     }
     .color {
-      width: 35px;
-      height: 35px;
+      width: 35px; height: 35px;
       border-radius: 50%;
       border: 1px solid #ccc;
     }
@@ -78,7 +73,7 @@
       margin-right: 15px;
       padding: 10px 20px;
       border-radius: 6px;
-      color: #fff;
+      color: white;
       background: #007bff;
       display: inline-block;
     }
@@ -90,16 +85,16 @@
 <body>
 
   <div class="container">
-    <div class="viewer">
+
+    <div class="iframe-wrapper">
       <iframe
-        title="T-shirt Polo Lengan Pendek"
         src="https://sketchfab.com/models/74c33d16b31346f1a46a55c3ec8e8a78/embed"
-        frameborder="0"
         allowfullscreen
         mozallowfullscreen="true"
         webkitallowfullscreen="true"
-        allow="autoplay; fullscreen; xr-spatial-tracking">
-      </iframe>
+        allow="autoplay; fullscreen; xr-spatial-tracking"
+        title="T-shirt Polo Lengan Pendek"
+      ></iframe>
     </div>
 
     <div class="content">
@@ -110,11 +105,11 @@
         <p><strong>Bedenler:</strong> S, M, L, XL</p>
         <p><strong>Renkler:</strong></p>
         <div class="colors">
-          <div class="color" style="background-color:#ffffff;" title="Beyaz"></div>
-          <div class="color" style="background-color:#000000;" title="Siyah"></div>
-          <div class="color" style="background-color:#1a4d91;" title="Lacivert"></div>
-          <div class="color" style="background-color:#b4b4b4;" title="Gri"></div>
-          <div class="color" style="background-color:#be3144;" title="Kırmızı"></div>
+          <div class="color" style="background:#fff" title="Beyaz"></div>
+          <div class="color" style="background:#000" title="Siyah"></div>
+          <div class="color" style="background:#1a4d91" title="Lacivert"></div>
+          <div class="color" style="background:#b4b4b4" title="Gri"></div>
+          <div class="color" style="background:#be3144" title="Kırmızı"></div>
         </div>
         <div class="actions">
           <a href="mailto:satis@seninsiten.com?subject=Tişört Satın Alma Talebi&body=Merhaba, tişört ile ilgileniyorum." target="_blank">Satın Al / İletişim</a>
